--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
+<link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
 <title>Smk Prisma Pioneer</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -19,7 +20,7 @@
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="index.html">Prisma</a></h1>
+        <h1><a href="index.html">SMK Prisma Pioneer</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
@@ -28,10 +29,6 @@
           <li><a class="drop" href="#">Pages</a>
             <ul>
               <li><a href="pages/gallery.html">Gallery</a></li>
-              <li><a href="pages/full-width.html">Full Width</a></li>
-              <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
-              <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
-              <li><a href="pages/basic-grid.html">Basic Grid</a></li>
             </ul>
           </li>
           
@@ -51,28 +48,28 @@
         <li>
           <article>
             <h2 class="heading">Teknik Komputer Jaringan Komputer</h2>
-            <p>Nulla a consectetur lacus duis maximus in dolor in vestibulum</p>
+            <p></p>
             <footer><a class="btn" href="#">More Info</a></footer>
           </article>
         </li>
         <li>
           <article>
             <h2 class="heading">Geologi Pertambangan</h2>
-            <p>Nulla a consectetur lacus duis maximus in dolor in vestibulum</p>
+            <p></p>
             <footer><a class="btn" href="#">More Info</a></footer>
           </article>
         </li>
         <li>
           <article>
             <h2 class="heading">Keperawatan</h2>
-            <p>Arcu vel pulvinar commodo urna nunc laoreet velit nec aliquet</p>
+            <p></p>
             <footer><a class="btn" href="#">More Info</a></footer>
           </article>
         </li>
         <li>
           <article>
             <h2 class="heading">Akuntansi</h2>
-            <p>Diam pulvinar euismod urna sed tristique nunc porta tempor</p>
+            <p></p>
             <footer><a class="btn" href="#">More Info</a></footer>
           </article>
         </li>
@@ -122,29 +119,29 @@
     </div>
     <ul class="nospace group intro">
       <li class="one_third first">
-        <article><a href="#"><img src="img/sport.jpg" alt=""></a>
+        <article><a href="#"><img src="img/high3.jpg" alt=""></a>
           <div class="excerpt">
-            <h6 class="heading">Sporthall</h6>
-            <p>Tempat dilakukan-nya kegiatan Olahraga dan Upacara Bendera.</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
+            <h6 class="heading">About</h6>
+            <p>SMK Prisma Pioneer adalah sebuah institusi pendidikan menawarkan lingkungan pendidikan yang baik dimana berada di daerah yang jauh dari keramaian kota dan dikelilingi oleh udara segar.</p>
+            <footer><a href="#"></a></foter>
           </div>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><img src="img/our school.jpg" alt=""></a>
+        <article><a href="#"><img src="img/high2.jpg" alt=""></a>
           <div class="excerpt">
-            <h6 class="heading">Bagian belakang Sekolah</h6>
-            <p>Ini adalah bagian belakang sekolah kami.</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
+            <h6 class="heading">Learning System</h6>
+            <p>Manado Prisma School menyediakan kualitas pendidikan terbaik dengan tenaga pengajar berkualitas dalam bidangnya baik dalam negeri maupun luar negeri.</p>
+            <footer><a href="#"></a></footer>
           </div>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><img src="img/dining fix.jpg" alt=""></a>
+        <article><a href="#"><img src="img/high.jpg" alt=""></a>
           <div class="excerpt">
-            <h6 class="heading">Kantin & Dining</h6>
-            <p>Adalah tempat dimana para siswa & siswi makan pagi, siang, sore.</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
+            <h6 class="heading">Ekstrakulikuler</h6>
+            <p>Adapun kegiatan Ekstrakulikuler dan Klub pelajar yang disediakan untuk mendukung minat siswa serta berprestasi di bidang khusus yang mereka sukai.</p>
+            <footer><a href="#"></a></footer>
           </div>
         </article>
       </li>
@@ -163,14 +160,14 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="background-image:url('');">
+<div class="wrapper bgded overlay" style="background-color: #f5f5f0;">
   <article class="hoc container clear cta"> 
     <!-- ################################################################################################ -->
     <div class="three_quarter first">
-      <h6 class="nospace">Tentang Kami</h6>
-      <p class="nospace">Jika anda ingin lebih mengenal kami silakan</p>
+      <h6 class="nospace">Universitas Prisma</h6>
+      <p class="nospace">Jika anda ingin lebih mengenal lebih Universitas Prisma.</p>
     </div>
-    <footer class="one_quarter"><a class="btn medium" href="#">Klik Disini!</a></footer>
+    <footer class="one_quarter"><a class="btn medium" href="http://www.prisma.ac.id/">Klik Disini!</a></footer>
     <!-- ################################################################################################ -->
   </article>
 </div>
@@ -213,7 +210,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper row4 bgded overlay" style="background-image:url('img/outside.jpg');">
+<div class="wrapper row4 bgded overlay" style="background-image:url('img/tentang.jpg');">
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="one_quarter first">
@@ -231,10 +228,10 @@
         </ul>
       </nav>
       <ul class="faico clear">
-        <li><a class="faicon-facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a class="faicon-twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="faicon-dribble" href="#"><i class="fa fa-dribbble"></i></a></li>
-        <li><a class="faicon-linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="faicon-facebook" href="https://www.facebook.com/manado.prisma.school/"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="faicon-twitter" href="https://twitter.com/manadoprismasch"><i class="fa fa-twitter"></i></a></li>
+        <li><a class="faicon-instagram" href="https://www.instagram.com/manadoprismaschool/?hl=id"><i class="fa fa-instagram"></i></a></li>
+        <li><a class="faicon-youtube" href="https://www.youtube.com/channel/UCASjApKKrQpRZMKm5uuz6og"><i class="fa fa-youtube"></i></a></li>
       </ul>
     </div>
     <div class="one_quarter">
@@ -273,7 +270,7 @@
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear"> 
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="https://www.facebook.com/brayan.vallentino">Vallentino Izaac</a></p>
+    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="https://www.facebook.com/brayan.vallentino">Bryan Vallentino Izaac</a></p>
     <p class="fl_right">TKJ 2016<a target="_blank" href="#" title="Free Website Templates"></a></p>
     <!-- ################################################################################################ -->
   </div>
