--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -36,7 +36,7 @@ Licence URI: http://www.os-templates.com/template-terms
               <li class="active"><a href="gallery.html">Gallery</a></li>
               <li><a href="full-width.html">SMK Prisma Pioneer</a></li>
             </ul>
-          </li>
+          </li> 
       </nav>
     </header>
     <!-- ################################################################################################ -->
@@ -86,8 +86,8 @@ Licence URI: http://www.os-templates.com/template-terms
       <nav class="pagination">
         <ul>
           <li class="current"><strong>1</strong></li>
-          <li><a href="file:///C:/Users/Vallen/Downloads/Compressed/yoffa/yoffa/pages/gallery2.html">2</a></li>
-          <li><a href="file:///C:/Users/Vallen/Downloads/Compressed/yoffa/yoffa/pages/gallery2.html">Next &raquo;</a></li>
+          <li><a href="//vallentino06.github.io/gallery2.html">2</a></li>
+          <li><a href="//vallentino06.github.io/gallery2.html">Next &raquo;</a></li>
         </ul>
       </nav>
       <!-- ################################################################################################ -->
