--- a/pages/gallery2.html
+++ b/pages/gallery2.html
@@ -110,9 +110,10 @@ Licence URI: http://www.os-templates.com/template-terms
       <!-- ################################################################################################ -->
       <nav class="pagination">
         <ul>
-          <li><a href="file:///C:/Users/Vallen/Downloads/Compressed/yoffa/yoffa/pages/gallery.html">&laquo; Previous</a></li>
-          <li><a href="#">1</a></li>
+          <li><a href="//vallentino06.github.io/gallery.html">&laquo; Previous</a></li>
+          <li><a href="//vallentino06.github.io/gallery.html">1</a></li>
           <li class="current"><strong>2</strong></li>
+          
         </ul>
       </nav>
       <!-- ################################################################################################ -->
