--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -25,7 +25,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="../index.html">PRISMA</a></h1>
+        <h1><a href="../index.html">SMK Prisma Pioneer</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
@@ -34,7 +34,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul>
               <li class="active"><a href="gallery.html">Gallery</a></li>
-              <li><a href="full-width.html">SMK Prisma Pioneer</a></li>
+              <li><a href="../index.html">SMK Prisma Pioneer</a></li>
             </ul>
           </li> 
       </nav>
