--- a/pages/gallery2.html
+++ b/pages/gallery2.html
@@ -25,7 +25,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="../index.html">PRISMA</a></h1>
+        <h1><a href="../index.html">SMK Prisma Pioneer</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
@@ -33,28 +33,9 @@ Licence URI: http://www.os-templates.com/template-terms
           <li><a href="../index.html">Home</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul>
-              <li class="active"><a href="gallery.html">Gallery</a></li>
-              <li><a href="full-width.html">Full Width</a></li>
-              <li><a href="sidebar-left.html">Sidebar Left</a></li>
-              <li><a href="sidebar-right.html">Sidebar Right</a></li>
-              <li><a href="basic-grid.html">Basic Grid</a></li>
+              <li class="active"><a href="gallery2.html">Gallery</a></li>
             </ul>
           </li>
-          <li><a class="drop" href="#">Dropdown</a>
-            <ul>
-              <li><a href="#">Level 2</a></li>
-              <li><a class="drop" href="#">Level 2 + Drop</a>
-                <ul>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Level 2</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Link Text</a></li>
-          <li><a href="#">Link Text</a></li>
         </ul>
       </nav>
     </header>
@@ -65,13 +46,6 @@ Licence URI: http://www.os-templates.com/template-terms
   <!-- ################################################################################################ -->
   <div id="breadcrumb" class="hoc clear"> 
     <!-- ################################################################################################ -->
-    <h6 class="heading">Gallery</h6>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Lorem</a></li>
-      <li><a href="#">Ipsum</a></li>
-      <li><a href="#">Dolor</a></li>
-    </ul>
     <!-- ################################################################################################ -->
   </div>
   <!-- ################################################################################################ -->
@@ -88,7 +62,7 @@ Licence URI: http://www.os-templates.com/template-terms
       <!-- ################################################################################################ -->
       <div id="gallery">
         <figure>
-          <header class="heading">Gallery Title Goes Here</header>
+          <header class="heading">Gallery</header>
           <ul class="nospace clear">
             <li class="one_quarter first"><a href="#"><img src="../images/demo/gallery/clement-h-544786-unsplash.jpg" alt=""></a></li>
             <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/mia-baker-322599-unsplash.jpg" alt=""></a></li>
@@ -103,7 +77,7 @@ Licence URI: http://www.os-templates.com/template-terms
             <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/green-chameleon-176136-unsplash.jpg" alt=""></a></li>
             <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/andreas-palmer-284310-unsplash.jpg" alt=""></a></li>
           </ul>
-          <figcaption>Gallery Description Goes Here</figcaption>
+          <!-- <figcaption>Gallery Description Goes Here</figcaption> -->
         </figure>
       </div>
       <!-- ################################################################################################ -->
