--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <ul class="slides">
         <li>
           <article>
-            <h2 class="heading">Teknik Komputer Jaringan Komputer</h2>
+            <h2 class="heading">Teknik Komputer Jaringan</h2>
             <p></p>
             <footer><a class="btn" href="#">More Info</a></footer>
           </article>
