--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -86,8 +86,8 @@ Licence URI: http://www.os-templates.com/template-terms
       <nav class="pagination">
         <ul>
           <li class="current"><strong>1</strong></li>
-          <li><a href="//vallentino06.github.io/gallery2.html">2</a></li>
-          <li><a href="//vallentino06.github.io/gallery2.html">Next &raquo;</a></li>
+          <li><a href="//vallentino06.github.io/pages/gallery2.html">2</a></li>
+          <li><a href="//vallentino06.github.io/pages/gallery2.html">Next &raquo;</a></li>
         </ul>
       </nav>
       <!-- ################################################################################################ -->
