--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
-<head>
-<link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
+<head> 
+<link rel="shortcut icon" href="http://vallentino06.github.io/images/favicomatic/favicon-32x32.png">
 <title>Smk Prisma Pioneer</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
