--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <li><a class="drop" href="#">Pages</a>
             <ul>
               <li><a href="pages/gallery.html">Gallery</a></li>
+              <li><a href="https://izaac06.github.io/">Old SMK Prisma Pioneer Website</a></li>
             </ul>
           </li>
           
