--- a/pages/gallery2.html
+++ b/pages/gallery2.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
-<!--
-Template Name: Yoffa
-Author: <a href="http://www.os-templates.com/">OS Templates</a>
-Author URI: http://www.os-templates.com/
-Licence: Free to use under our free template licence terms
-Licence URI: http://www.os-templates.com/template-terms
--->
-<html lang="">
-<!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
+<link rel="shortcut icon" href="http://vallentino06.github.io/images/favicomatic/favicon-32x32.png">
 <title>SMK PRISMA PIONEER|Gallery</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
