--- a/pages/gallery2.html
+++ b/pages/gallery2.html
@@ -76,8 +76,8 @@
       <!-- ################################################################################################ -->
       <nav class="pagination">
         <ul>
-          <li><a href="//vallentino06.github.io/gallery.html">&laquo; Previous</a></li>
-          <li><a href="//vallentino06.github.io/gallery.html">1</a></li>
+          <li><a href="//vallentino06.github.io/pages/gallery.html">&laquo; Previous</a></li>
+          <li><a href="//vallentino06.github.io/pages/gallery.html">1</a></li>
           <li class="current"><strong>2</strong></li>
           
         </ul>
