--- a/index.html
+++ b/index.html
@@ -158,13 +158,20 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="background-color: #f5f5f0;">
+<div class="wrapper bgded overlay" style="background-color: #911414;">
   <article class="hoc container clear cta"> 
     <!-- ################################################################################################ -->
     <div class="three_quarter first">
-      <h6 class="nospace">Universitas Prisma</h6>
-      <p class="nospace">Jika anda ingin lebih mengenal lebih Universitas Prisma.</p>
+      <h6 class="nospace"></h6>
+      <a href="#"><img src="img/universitas.png" alt=""></a>
+      <br>
+      <br>
+      <p class="nospace">Universitas Prisma adalah lembaga pendidikan yang mempunyai visi untuk menjadi Universitas yang unggul dalam ilmu pengetahuan, teknologi, seni budaya secara holistik dengan semangat kewirausahaan yang berdaya saling dipadukan dengan kearifan lokal.</p>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer class="one_quarter"><a class="btn medium" href="http://www.prisma.ac.id/">Klik Disini!</a></footer>
     <!-- ################################################################################################ -->
   </article>
