--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <article><a href="#"><img src="img/high3.jpg" alt=""></a>
           <div class="excerpt">
             <h6 class="heading">About</h6>
-            <p>SMK Prisma Pioneer adalah sebuah institusi pendidikan menawarkan lingkungan pendidikan yang baik dimana berada di daerah yang jauh dari keramaian kota dan dikelilingi oleh udara segar.</p>
+            <p>SMK Prisma Pioneer merupakan institusi pendidikan yang berlandaskan filosofi Kristen. Menggunakan kurikulum yang ditetapkan oleh Departemen Pendidikan Nasional dan muatan lokal yang berbasis kompetensi (Nasional Plus). Serta menyediakan kualitas pendidikan terbaik dengan tenaga pengajar yang berkualitas dalam bidangnya baik dari dalam negeri maupun luar negeri.</p>
             <footer><a href="#"></a></foter>
           </div>
         </article>
@@ -129,7 +129,7 @@
         <article><a href="#"><img src="img/high2.jpg" alt=""></a>
           <div class="excerpt">
             <h6 class="heading">Learning System</h6>
-            <p>Manado Prisma School menyediakan kualitas pendidikan terbaik dengan tenaga pengajar berkualitas dalam bidangnya baik dalam negeri maupun luar negeri.</p>
+            <p>Manado Prisma School menyediakan kualitas pendidikan terbaik dengan tenaga pengajar berkualitas dalam bidangnya baik dalam negeri maupun luar negeri. Tujuan dari hal ini adalah untuk mempersiapkan siswa baik secara Akademis,Mental,Komunikasi ataupun Spiritual siswa dalam menghadapi MEA (Masyarakat Ekonomi Asean) ataupun untuk berkerja di Luar atau Dalam Negeri.</p>
             <footer><a href="#"></a></footer>
           </div>
         </article>
@@ -138,7 +138,7 @@
         <article><a href="#"><img src="img/high.jpg" alt=""></a>
           <div class="excerpt">
             <h6 class="heading">Ekstrakulikuler</h6>
-            <p>Adapun kegiatan Ekstrakulikuler dan Klub pelajar yang disediakan untuk mendukung minat siswa serta berprestasi di bidang khusus yang mereka sukai.</p>
+            <p>Adapun kegiatan Ekstrakulikuler dan Klub pelajar yang disediakan untuk mendukung minat siswa serta berprestasi di bidang khusus serperti, Sains (Biologi, Fisika, Kimia dan Matematika ), Sastra (Teater, Musikalisasi Puisi ), Komputer (Programing, Graphic Design, Game Development, Robotik),Penelitian Ilmiah Remaja, Palang Merah Remaja, Musik (Angklung), Olahraga (Basket, Futsal, Karate).</p>
             <footer><a href="#"></a></footer>
           </div>
         </article>
