--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <article><a href="#"><img src="img/high2.jpg" alt=""></a>
           <div class="excerpt">
             <h6 class="heading">Learning System</h6>
-            <p>Manado Prisma School menyediakan kualitas pendidikan terbaik dengan tenaga pengajar berkualitas dalam bidangnya baik dalam negeri maupun luar negeri. Tujuan dari hal ini adalah untuk mempersiapkan siswa baik secara Akademis,Mental,Komunikasi ataupun Spiritual siswa dalam menghadapi MEA (Masyarakat Ekonomi Asean) ataupun untuk berkerja di Luar atau Dalam Negeri.</p>
+            <p>Manado Prisma School menyediakan kualitas pendidikan terbaik dan profesional dengan tenaga pengajar berkualitas dalam bidangnya baik dalam negeri maupun luar negeri. Tujuan dari hal ini adalah untuk mempersiapkan siswa baik secara Akademis,Mental,Komunikasi ataupun Spiritual siswa dalam menghadapi MEA (Masyarakat Ekonomi Asean) ataupun untuk berkerja di Luar atau Dalam Negeri</p>
             <footer><a href="#"></a></footer>
           </div>
         </article>
