--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
         <h1><a href="index.html">SMK Prisma Pioneer</a></h1>
       </div>
       <!-- ################################################################################################ -->
-      <nav id="mainav" class="fl_right">
+          <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a class="drop" href="#">Pages</a>
-            <ul>
-              <li><a href="pages/gallery.html">Gallery</a></li>
-              <li><a href="https://izaac06.github.io/">Old SMK Prisma Pioneer Website</a></li>
-            </ul>
-          </li>
+          <li class="active"><a href="pages/gallery.html">Gallery</a></li>
+          <li class="active"><a href="https://izaac06.github.io/">First Web</a></li>
+          
           
 
        </ul>
@@ -113,7 +110,7 @@
   <section class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
-      <h6 class="heading">Smk Prisma Pioneer</h6>
+      <h6 class="heading">SMK Prisma Pioneer</h6>
     </div>
     <ul class="nospace group intro">
       <li class="one_third first">
@@ -129,7 +126,7 @@
         <article><a href="#"><img src="img/high2.jpg" alt=""></a>
           <div class="excerpt">
             <h6 class="heading">Learning System</h6>
-            <p>Manado Prisma School menyediakan kualitas pendidikan terbaik dan profesional dengan tenaga pengajar berkualitas dalam bidangnya baik dalam negeri maupun luar negeri. Tujuan dari hal ini adalah untuk mempersiapkan siswa baik secara Akademis,Mental,Komunikasi ataupun Spiritual siswa dalam menghadapi MEA (Masyarakat Ekonomi Asean) ataupun untuk berkerja di Luar atau Dalam Negeri</p>
+            <p>Manado Prisma School menyediakan kualitas pendidikan terbaik dan profesional dengan tenaga pengajar berkualitas dalam bidangnya baik dalam negeri maupun luar negeri. Tujuan dari hal ini adalah untuk mempersiapkan siswa baik secara Akademis,Mental,Komunikasi ataupun Spiritual siswa dalam menghadapi MEA (Masyarakat Ekonomi Asean) ataupun untuk berkerja di Luar atau Dalam Negeri.</p>
             <footer><a href="#"></a></footer>
           </div>
         </article>
