--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <head>
   <link rel="stylesheet" href="css/map sto.css">
 <section class="location" id="location">
-  <div class="container">
+  <div class="containermap">
     <div class="row">
       <div class="col-sm-12 text-center">
         <hr>
